Adding Entity Framework Core, database generation code, seed/test data, and logging to debug output.

--- a/config.json
+++ b/config.json
@@ -1,5 +1,8 @@
 {
   "MailSettings": {
     "ToAddress": "test@test.com"
+  },
+  "ConnectionStrings": {
+    "WorldContextConnection": "server=(localdb)\\MSSQLLocalDB;database=TheWorldDb;Trusted_Connection=true;"
   }
 }
