--- a/project.json
+++ b/project.json
@@ -19,7 +19,8 @@
       "type": "build"
     },
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
-    "AutoMapper": "5.1.1"
+    "AutoMapper": "5.1.1",
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0"
   },
 
   "tools": {
