AngularJS - Handling Forms

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "ToAddress": "test@test.com"
   },
   "ConnectionStrings": {
-    "WorldContextConnection": "server=(localdb)\\MSSQLLocalDB;database=TheWorldDb;Trusted_Connection=true;"
+    "WorldContextConnection": "server=(localdb)\\MSSQLLocalDB;database=TheWorldDb;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
   "Keys": {
     "BingKey": "DONT_EVER_PUT_KEYS_IN_SOURCE_CONTROL"
