--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "bootstrap": "~3.3.7",
     "font-awesome": "~4.6.3",
     "bootswatch": "3.3.7",
-    "angular" : "1.5.8"
+    "angular": "1.5.9-build.5105+sha.d80cdeb",
+    "angular-route": "1.5.8"
   },
   "resolutions": {
     "jquery": ">= 1.7.2"
