--- a/wwwroot/lib/angular-route/bower.json
+++ b/wwwroot/lib/angular-route/bower.json
@@ -1,9 +1,10 @@
 {
-  "name": "angular",
+  "name": "angular-route",
   "version": "1.5.9-build.5105+sha.d80cdeb",
   "license": "MIT",
-  "main": "./angular.js",
+  "main": "./angular-route.js",
   "ignore": [],
   "dependencies": {
+    "angular": "1.5.9-build.5105+sha.d80cdeb"
   }
 }
