--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "font-awesome": "~4.6.3",
     "bootswatch": "3.3.7",
     "angular": "1.5.9-build.5105+sha.d80cdeb",
-    "angular-route": "1.5.8"
+    "angular-route": "1.5.8",
+    "travelmap": "~1.0.2"
   },
   "resolutions": {
     "jquery": ">= 1.7.2"
