ASP.NET Core Deployment - Pubilshing with Visual Studio

--- a/project.json
+++ b/project.json
@@ -60,7 +60,9 @@
   "publishOptions": {
     "include": [
       "wwwroot",
-      "web.config"
+      "web.config",
+      "Views",
+      "config.json"
     ]
   },
 
